src/main/java/com/example/usedTrade/error/ErrorResponse.java
package com.example.usedTrade.error;

import lombok.*;

@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
@ToString
public class ErrorResponse {
    private int statusCode;
    private String message;
}
